Inject images in the dom

--- a/app/index.html
+++ b/app/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Reddit Wallpapers</title>
+    <link rel="stylesheet" media="all" type="text/css" href="styles.css" />
 
 </head>
 <body>
+
+    <div id="wallpapers">
+
+    </div>
+
     <script src="jspm_packages/system.js"></script>
     <script src="config.js"></script>
     <script>
