Inizialize angular app, ng-include a toolbar

--- a/app/index.html
+++ b/app/index.html
@@ -7,9 +7,13 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
     <title>Reddit Wallpapers Showcase</title>
     <link rel="stylesheet" media="all" type="text/css" href="styles.css" />
+    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,700'>
 
 </head>
-<body>
+<body layout="column" ng-app="redditWallpapersApp" ng-cloak="">
+
+    <div  ng-include="'views/nav.html'"></div>
+
 
     <div id="wallpapers">
 
