Created sidenav controller.

--- a/app/index.html
+++ b/app/index.html
@@ -9,41 +9,49 @@
     <link rel="stylesheet" media="all" type="text/css" href="styles.css" />
     <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,700'>
 
+    <style type="text/css">
+        /**
+         * Hide when Angular is not yet loaded and initialized
+         */
+        [ng-cloak] {
+            display: none;
+        }
+    </style>
+
 </head>
 <body layout="column" ng-app="redditWallpapersApp" ng-cloak="">
 
     <md-sidenav md-component-id="left">
-        <!-- TODO: add controller -->
-        <md-toolbar>
-            <div class="md-toolbar-tools">
-                <h1>Choose a sub-reddit:</h1>
-            </div>
-        </md-toolbar>
-        <md-content>
-            <md-list>
-                <!-- TODO: get it from the  controller -->
-                <md-list-item class="subreddit active">
-                    <span>/r/EarthPorn</span>
-                </md-list-item>
-                <md-divider></md-divider>
-                <md-list-item class="subreddit">
-                    <span>/r/SeaPorn</span>
-                </md-list-item>
-                <md-divider ></md-divider>
-                <md-list-item class="subreddit">
-                    <span>/r/HumanPorn</span>
-                </md-list-item>
-                <md-divider ></md-divider>
-            </md-list>
-        </md-content>
+        <!-- TODO: move to separate file -->
+        <div ng-controller="SideNaVController as sideNavController">
+            <md-toolbar>
+                <div class="md-toolbar-tools">
+                    <h1>Choose a sub-reddit:</h1>
+                </div>
+            </md-toolbar>
+            <md-content>
+                <md-list>
+
+                    <md-list-item class="subreddit"
+                                  ng-class="{active: subreddit === sideNavController.active}"
+                                  ng-repeat-start="subreddit in sideNavController.subreddits"
+                                  ng-click="sideNavController.goTo(subreddit)"
+                            >
+                        <span>/r/{{subreddit}}</span>
+                    </md-list-item>
+                    <md-divider ng-repeat-end></md-divider>
+                </md-list>
+            </md-content>
+        </div>
     </md-sidenav>
 
     <div layout="column" tabindex="-1" role="main" flex>
 
         <md-toolbar ng-controller="ToolbarController as toolbarController">
+            <!-- TODO: move to separate file -->
             <div class="md-toolbar-tools">
                 <md-button ng-click="toolbarController.openSidenav()">
-                    <md-icon md-svg-src="./assets/menu.svg" alt="Open Side Navigation"></md-icon>
+                    <md-icon md-svg-src="./assets/menu.svg" alt="Open Side Navigation" aria-label="Toggle Menu"></md-icon>
                 </md-button>
                 <h1>Reddit Wallpapers Showcase</h1>
             </div>
